--- a/Modelos de aprendizaje.ipynb
+++ b/Modelos de aprendizaje.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b79efef",
-   "metadata": {},
-   "source": [
-    "### Estructura del notebook\n",
-    "\n",
-    "1. Introducción de librerias a utilizar y presentación inicial de los conjuntos de datos.\n",
-    "2. Respuesta a las preguntas 1 a 3. \n",
-    "3. Analisis exploratorio del conjunto de datos Occupancy Detection (después de responder las primeras cuatro preguntas se llegó a la conclusión de que el conjunto de datos que podía garantizar generalización era el de Occupancy Detection por lo tanto es el enfoque del notebook y el unico que va a ser utilizado para continuar con las demás preguntas). \n",
-    "4. Respuesta a las preguntas 4 a 6.\n",
-    "5. Aplicación del mismo problema usando Regresión logistica y Arboles de decisión. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "504623ba",
    "metadata": {},
    "source": [
-    "### Introducción"
+    "### Librerias y carga de las fuentes de datos"
    ]
   },
   {
